--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,7 @@ jobs:
     - name: Test with pytest
       run: |
         python3 -m pytest
+    - name: Run tests and collect coverage
+      run: pytest --cov=./ --cov-report=xml
+    - name: Upload coverage reports to Codecov with GitHub Action
+      uses: codecov/codecov-action@v3
